<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rounded_surface"
    android:elevation="@dimen/md"
    android:orientation="vertical"
    android:padding="@dimen/xxl"
    tools:context=".ui.add.todo.AddTodoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_add_todo"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xxl"
        android:labelFor="@id/input_todo"
        android:text="@string/label_input_todo"
        android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    <EditText
        android:id="@+id/input_todo"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:text="Workout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lg">

        <TextView
            android:id="@+id/text_todo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_date_picker_placeholder_text"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_todo_date_picker"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_todo_date_picker_content_description"
            app:icon="@drawable/ic_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/lg">

        <TextView
            android:id="@+id/text_todo_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_time_picker_placeholder_text"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_todo_time_picker"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_todo_time_picker_content_description"
            app:icon="@drawable/ic_time"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_save_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/xxl"
        android:text="@string/button_save_todo_text" />
</LinearLayout>
